deploy/misc/dashboard/deployment.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: perf-dashboard
  namespace: perf-dashboard
  labels:
    name: perf-dashboard
spec:
  replicas: 1
  selector:
    matchLabels:
      name: perf-dashboard
  template:
    metadata:
      labels:
        name: perf-dashboard
    spec:
      containers:
        - name: dashboard
          image: quay.io/keithwhitley4/perf-dashboard:latest
          imagePullPolicy: "Always"
          ports:
            - containerPort: 3000
              protocol: TCP
          resources:
            limits:
              cpu: "1.0"
              memory: 2Gi
          securityContext:
            runAsUser: 1000
